search and view messages

--- a/www/index.html
+++ b/www/index.html
@@ -48,6 +48,10 @@
     : Load high level report data for an existing delivery
     <br />
     <br />
+    <a href="viewEmail.php"><b>View an existing email</b></a>
+    : Load data for an existing email
+    <br />
+    <br />
     <a href="viewList.php"><b>View an existing list</b></a>
     : Load high level data for an existing list
     <br />
